--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Framework Guru Courses</title>
+    <title>Index</title>
 
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 
@@ -150,7 +150,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -186,7 +186,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -222,7 +222,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -261,7 +261,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -298,7 +298,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -331,7 +331,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="picture.jpg"
+                                     src="https://st.depositphotos.com/1342206/1463/i/950/depositphotos_14634185-stock-photo-hackers-concept-digital-illustration.jpg"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
